# addteam

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: README.md  team-minimal.yaml  team.yaml
scripts/: bootstrap_repo.py
src/addteam/: __init__.py  bootstrap_repo.py  cli.py
tests/: test_bootstrap.py
