[project]
name = "addteam"
version = "0.1.0"
description = "One-command access + onboarding bootstrap for this repo."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx",
    "rich",
]

[project.scripts]
addteam = "addteam.cli:main"

[project.urls]
Repository = "https://github.com/michaeljabbour/addteam"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["addteam*"]

[tool.ruff]
line-length = 120
target-version = "py310"
