[project]
name = "addteam"
version = "0.3.0"
description = "One-command collaborator management for GitHub repos with GitOps support."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx",
    "rich",
    "pyyaml>=6.0",
]

[project.scripts]
addteam = "addteam.cli:main"
# Legacy alias
addteam = "addteam.cli:main"

[project.urls]
Repository = "https://github.com/michaeljabbour/addteam"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["addteam*"]

[tool.ruff]
line-length = 120
target-version = "py310"
